# omp-vortex-dev

./: .gitignore  README.md
cmake_omp/: CMakeLists.txt  Makefile  main.cpp  main.target.bc
simple_offloading_omp/: Makefile  compilation_phases.md  simple_offloading.cc
simple_omp/: Makefile  simple_omp  simple_omp.cc
